Cloudformation/infra.yml
Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    VpcCIDR: 
        Description: the IP range for the VPC
        Type: String
        Default: 10.0.0.0/16

    pubSubnet1cidr:
        Description: the IP range for the public subnet in AZ a
        Type: String
        Default: 10.0.1.0/24

    pubSubnet2cidr:
        Description: the IP range for the public subnet in AZ b
        Type: String
        Default: 10.0.2.0/24

    privSubnet1cidr:
        Description: the IP range for the private subnet in AZ a
        Type: String
        Default: 10.0.3.0/24

    privSubnet2cidr:
        Description: the IP range for the private subnet in AZ b
        Type: String
        Default: 10.0.4.0/24
    
Resources:

    VPC: 
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName
            
    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    pubSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref pubSubnet1cidr
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ-a)

    pubSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref pubSubnet2cidr
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ-b)

    privSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref privSubnet1cidr
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ-a)

    privSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref privSubnet2cidr
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ-b)

    Nat1EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties: 
            Domain: vpc

    Nat2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    Nat1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt Nat1EIP.AllocationId
            SubnetId: !Ref pubSubnet1

    Nat2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt Nat2EIP.AllocationId
            SubnetId: !Ref pubSubnet2
        

    pubRT:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref pubRT
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    pubSubnet1RTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref pubRT
            SubnetId: !Ref pubSubnet1

    pubSubnet2RTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref pubRT
            SubnetId: !Ref pubSubnet2
    

    privRT1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ-a)

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref privRT1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref Nat1

    privSubnet1RTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref privRT1
            SubnetId: !Ref privSubnet1

    privRT2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref VPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ-b)

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref privRT2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref Nat2

    privSubnet2RTAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref privRT2
            SubnetId: !Ref privSubnet2

Outputs: 

    VPC: 
        Description: the created VPC for the project
        Value: !Ref VPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID

    VPCPublicRouteTable:
        Description: Public Route
        Value: !Ref pubRT
        Export:
          Name: !Sub ${EnvironmentName}-PUB-RT

    VPCPrivateRouteTable1:
        Description: Private Route AZ-a
        Value: !Ref privRT1
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-RT1

    VPCPrivateRouteTable2:
        Description: Private Route AZ-b
        Value: !Ref privRT2
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-RT2

    PublicSubnets:
        Description: all public subnets
        Value: !Join [ ",", [ !Ref pubSubnet1, !Ref pubSubnet2 ]]
        Export:
          Name: !Sub "${EnvironmentName}-PUB-NETS"

    PrivateSubnets:
        Description: all private subnets
        Value: !Join [ ",", [ !Ref privSubnet1, !Ref privSubnet2 ]]
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-NETS

    PublicSubnet1:
        Description: the public subnet in AZ(a)
        Value: !Ref pubSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PUB

    PublicSubnet2: 
        Description: the public subnet in AZ(b)
        Value: !Ref pubSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PUB-SUBNET-AZ

    PrivateSubnet1:
        Description: the private subnet in AZ(a)
        Value: !Ref privSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-SUBNET-AZ-a

    PrivateSubnet2: 
        Description: the private subnet in  AZ(b)
        Value: !Ref privSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-SUBNET-AZ-b
